--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "next": "13.4.7",
     "openai": "^5.10.2",
     "postcss": "^8.4.27",
-    "prisma": "^6.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sqlite3": "^5.1.7",
     "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "prisma": "^6.12.0"
   }
 }
