--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "prisma": "^6.12.0"
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.8",
+    "prisma": "^6.12.0",
+    "typescript": "^5.8.3"
   }
 }
